新增了参数模式